<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/medico"
    android:padding="15dp"
    tools:context=".activity.LoginMedicoActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="200dp"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textColor="@color/branca"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/linkCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titulo"
                android:layout_marginTop="5dp"
                android:text="@string/cad"
                android:textAlignment="center"
                android:textColor="@color/branca" />

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/linkCadastro"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/btn_custon"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/btnCad"
                android:textColor="@color/branca" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:textColorHint="#cccccc"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/userMedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/branca" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/senha"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/user"
                android:textColorHint="#cccccc"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/senhaMedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:textColor="@color/branca" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginLeft="5dp"
                android:id="@+id/recSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/senha"
                android:text="@string/esqueci_minha_senha"
                android:clickable="true"
                android:textColor="@color/linhaLogin"/>

            <Button
                android:id="@+id/btnLogarM"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_below="@id/recSenha"
                android:background="@drawable/btn_verde"
                android:text="@string/logar"
                android:textColor="@color/branca"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>