<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/medico"
    tools:context=".activity.Dados_Pessoais_medicosActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbrar" />
    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nome_M"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColorHint="#cccccc"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/nome_Medico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="@string/nome_completo"
                    android:inputType="textCapCharacters"
                    android:textColor="@color/branca" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_below="@+id/nome_M"
                android:id="@+id/nome_Dtnasc"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColorHint="#cccccc"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/dt_nascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="@string/data_de_nascimento"
                    android:inputType="number"
                    android:textColor="@color/branca" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/age"
                android:layout_width="135dp"
                android:layout_height="60dp"
                android:layout_below="@+id/nome_Dtnasc"
                android:textColorHint="#cccccc"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/idadeM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="@string/idade"
                    android:inputType="number"
                    android:textColor="@color/branca" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sexo"
                android:layout_width="205dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/nome_Dtnasc"
                android:textColorHint="#cccccc"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/sexoM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="Sexo"
                    android:inputType="textCapCharacters"
                    android:textColor="@color/branca" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_below="@+id/age"
                android:id="@+id/esp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColorHint="#cccccc"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/especialidadeM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="@string/especialidade"
                    android:inputType="textCapCharacters"
                    android:textColor="@color/branca" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_below="@+id/esp"
                android:id="@+id/CRM"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColorHint="#cccccc"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/crm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="@string/crm"
                    android:inputType="textCapCharacters"
                    android:textColor="@color/branca" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/CRM"
                android:layout_marginTop="10dp"
                android:textColorHint="#cccccc"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/emailM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/branca" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/senhaM"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/email"
                android:layout_marginTop="10dp"
                android:textColorHint="#cccccc"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/cadsenhaM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:textColor="@color/branca" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_below="@+id/senhaM"
                android:id="@+id/cadMedico"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/btn_verde"
                android:gravity="center"
                android:text="@string/salvar"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

        </RelativeLayout>


    </ScrollView>

</RelativeLayout>