<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/medico"
    tools:context=".activity.Reset_password_MedicoActivity">


    <include android:id="@+id/toolbar"
        layout="@layout/toolbrar"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frase_reset"
                android:textColor="@color/branca"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="#cccccc"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/email_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="@string/email"

                    android:inputType="textEmailAddress"
                    android:textColor="@color/branca" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnconfTrocaSenhaMd"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_custon"
                android:textColor="@color/branca"
                android:textStyle="bold"
                android:text="@string/reset_senha"
                />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>